{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 96,
  "lineage": "7df92c02-b589-c3e1-35cf-fd6c8ba04cb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-076dd21d4deb22a2e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-dev-ec2-ssm-profile",
            "id": "i-076dd21d4deb22a2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07d56b4a937232e1c"
              }
            ],
            "primary_network_interface_id": "eni-07d56b4a937232e1c",
            "private_dns": "ip-10-0-20-225.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.225",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "throughput": 125,
                "volume_id": "vol-01874bc982f92e367",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e3125e2416d89e8",
            "tags": {
              "Name": "ansible-database",
              "Role": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-database",
              "Project": "ansible",
              "Role": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07037368a35e6d9a7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-076dd21d4deb22a2e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.database",
            "aws_security_group.master",
            "aws_security_group.webserver",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-01726759358d6a885",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-dev-ec2-ssm-profile",
            "id": "i-01726759358d6a885",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b4a89f5241f4953b"
              }
            ],
            "primary_network_interface_id": "eni-0b4a89f5241f4953b",
            "private_dns": "ip-10-0-10-197.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.197",
            "public_dns": "ec2-3-75-193-123.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.193.123",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "throughput": 125,
                "volume_id": "vol-0a079fbd01b9ab263",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07175456be790d1fc",
            "tags": {
              "Name": "ansible-master",
              "Role": "master"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-master",
              "Project": "ansible",
              "Role": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c15c2f22039171b5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-01726759358d6a885",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.master",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-01a6aecd010b01cf4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-dev-ec2-ssm-profile",
            "id": "i-01a6aecd010b01cf4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-005e2fddf259f483f"
              }
            ],
            "primary_network_interface_id": "eni-005e2fddf259f483f",
            "private_dns": "ip-10-0-10-240.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.240",
            "public_dns": "ec2-18-194-41-99.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.41.99",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "throughput": 125,
                "volume_id": "vol-0a33c4780bad57fc9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07175456be790d1fc",
            "tags": {
              "Name": "ansible-webserver-1",
              "Role": "webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-webserver-1",
              "Project": "ansible",
              "Role": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d1e80ce24792677"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-01a6aecd010b01cf4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.master",
            "aws_security_group.webserver",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0757f5aff0b48905a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-dev-ec2-ssm-profile",
            "id": "i-0757f5aff0b48905a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b5ea21bc2da5907"
              }
            ],
            "primary_network_interface_id": "eni-02b5ea21bc2da5907",
            "private_dns": "ip-10-0-11-200.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.200",
            "public_dns": "ec2-18-156-2-211.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.2.211",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible"
                },
                "throughput": 125,
                "volume_id": "vol-04e15f3afbf7e7aef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024edf19176821ef5",
            "tags": {
              "Name": "ansible-webserver-2",
              "Role": "webserver"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-webserver-2",
              "Project": "ansible",
              "Role": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d1e80ce24792677"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0757f5aff0b48905a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.master",
            "aws_security_group.webserver",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-07037368a35e6d9a7",
            "description": "Security group for database instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07037368a35e6d9a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from webservers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d1e80ce24792677"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from master",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c15c2f22039171b5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-dev-database-sg",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ansible-dev-database-sg",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-dev-database-sg",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-07037368a35e6d9a7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.master",
            "aws_security_group.webserver",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-0c15c2f22039171b5",
            "description": "Security group for master instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c15c2f22039171b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "46.205.209.62/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-dev-master-sg",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ansible-dev-master-sg",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-dev-master-sg",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-0c15c2f22039171b5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-04d1e80ce24792677",
            "description": "Security group for webserver instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d1e80ce24792677",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Internal communication between webservers",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "SSH from master",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c15c2f22039171b5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-dev-webserver-sg",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ansible-dev-webserver-sg",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-dev-webserver-sg",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-04d1e80ce24792677",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:network-acl/acl-067124318c6eb8392",
            "default_network_acl_id": "acl-067124318c6eb8392",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-067124318c6eb8392",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-024edf19176821ef5",
              "subnet-07175456be790d1fc",
              "subnet-08e3125e2416d89e8",
              "subnet-0a55cc2990f8955b1"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-default",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-default",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-0b3e5fdedb54314a0",
            "default_route_table_id": "rtb-0b3e5fdedb54314a0",
            "id": "rtb-0b3e5fdedb54314a0",
            "owner_id": "419197236432",
            "propagating_vgws": null,
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-default",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-default",
              "Project": "ansible"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:internet-gateway/igw-00c38321c055d92b9",
            "id": "igw-00c38321c055d92b9",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "igw-00c38321c055d92b9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c38321c055d92b9",
            "id": "r-rtb-0503d0e0f23d37ed01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0503d0e0f23d37ed0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0503d0e0f23d37ed0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-090ae1f713d793917",
            "id": "rtb-090ae1f713d793917",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-private-eu-central-1a",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-private-eu-central-1a",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-090ae1f713d793917",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-03d72f8e8f831b482",
            "id": "rtb-03d72f8e8f831b482",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-private-eu-central-1b",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-private-eu-central-1b",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-03d72f8e8f831b482",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:route-table/rtb-0503d0e0f23d37ed0",
            "id": "rtb-0503d0e0f23d37ed0",
            "owner_id": "419197236432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-public",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc-public",
              "Project": "ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtb-0503d0e0f23d37ed0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02259674ad754b100",
            "region": "eu-central-1",
            "route_table_id": "rtb-090ae1f713d793917",
            "subnet_id": "subnet-08e3125e2416d89e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-02259674ad754b100",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c692deca532ef97",
            "region": "eu-central-1",
            "route_table_id": "rtb-03d72f8e8f831b482",
            "subnet_id": "subnet-0a55cc2990f8955b1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-09c692deca532ef97",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056dfb0bcdc082bfc",
            "region": "eu-central-1",
            "route_table_id": "rtb-0503d0e0f23d37ed0",
            "subnet_id": "subnet-07175456be790d1fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-056dfb0bcdc082bfc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd57f808dd7af4b",
            "region": "eu-central-1",
            "route_table_id": "rtb-0503d0e0f23d37ed0",
            "subnet_id": "subnet-024edf19176821ef5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "rtbassoc-01bd57f808dd7af4b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-08e3125e2416d89e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e3125e2416d89e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-08e3125e2416d89e8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-0a55cc2990f8955b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55cc2990f8955b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-2",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-2",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-0a55cc2990f8955b1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-07175456be790d1fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07175456be790d1fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-07175456be790d1fc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:subnet/subnet-024edf19176821ef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024edf19176821ef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419197236432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-2",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-2",
              "Project": "ansible"
            },
            "vpc_id": "vpc-00967111b05c9ba96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "subnet-024edf19176821ef5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:vpc/vpc-00967111b05c9ba96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067124318c6eb8392",
            "default_route_table_id": "rtb-0b3e5fdedb54314a0",
            "default_security_group_id": "sg-00f6eb3aaf3e5741a",
            "dhcp_options_id": "dopt-0497cab12d457f90a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00967111b05c9ba96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3e5fdedb54314a0",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc",
              "Project": "ansible"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ansible-dev-vpc",
              "Project": "ansible"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "vpc-00967111b05c9ba96",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}